# MLIR-Tutorials

./: .gitignore  CMakeLists.txt  README.MD  add_padd.md  main.cpp  test.mlir
cases/: convert.mlir  pass.mlir  pattern.mlir
cmake/: add_all_subdirs.cmake
doc/: MLIR提供的工具.md  MLIR的基础用法.md  如何通过td文件创建pass.md  环境搭建.md
doc/iree/: 2023-03data-tiling.txt  23-01tiling.md  23-01tiling的字幕.txt  23-03data_tiling.md
doc/pass/: 如何通过td文件创建pass.md  模式匹配和lowing.md
include/CdsDemo/: CMakeLists.txt  CdsDemoPasses.h  CdsDemoPasses.td
include/CdsDemo/Analysis/: CMakeLists.txt  CdsAnalysis.hpp
include/CdsDemo/Conversion/: Patterns.h
include/CdsDemo/Transforms/: CdsDemoPasses.h  CdsDemoPasses.td
include/toy/: CMakeLists.txt  Toy.td  ToyInterfaces.h  ToyOps.h  ToyOps.td  ToyPasses.h  ToyPasses.td
lib/: CMakeLists.txt  readme.md  toy.cpp
lib/CdsDemo/: CMakeLists.txt  CdsDemoPasses.cpp
lib/CdsDemo/Analysis/: CMakeLists.txt  CdsAnalysis.cpp
lib/CdsDemo/Conversion/: CMakeLists.txt  Patterns.cpp
lib/CdsDemo/Transforms/: CMakeLists.txt  CdsDemoPasses.cpp
lib/IR/: CMakeLists.txt  toy.cpp
lib/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp
lib/toy/: CMakeLists.txt
lib/toy/Conversion/: CMakeLists.txt
lib/toy/IR/: CMakeLists.txt
lib/toy/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp
tools/: CMakeLists.txt
tools/cds_opt/: CMakeLists.txt  cds-opt.cpp
tools/demo_cpp/: CMakeLists.txt  main.cpp
tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
tools/toy_opt/: CMakeLists.txt  toy-opt.cpp
